--- a/DEIN-PROJEKTNAME/abstraction/pom.xml
+++ b/DEIN-PROJEKTNAME/abstraction/pom.xml
@@ -25,11 +25,11 @@
     </build>
 
     <dependencies>
-        <dependency>
-            <groupId>javax.persistence</groupId>
-            <artifactId>javax.persistence-api</artifactId>
-            <version>2.2</version>
-        </dependency>
+<dependency>
+    <groupId>jakarta.persistence</groupId>
+    <artifactId>jakarta.persistence-api</artifactId>
+</dependency>
+
 
         <dependency>
             <groupId>org.springframework</groupId>
